// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action should create action with "error and meta" 1`] = `
Object {
  "error": true,
  "meta": Object {
    "status": 403,
  },
  "payload": [Error],
  "type": "[Todo] fetch rejected",
}
`;

exports[`action should create action with "error payload" 1`] = `
Object {
  "error": true,
  "payload": [Error],
  "type": "[Todo] fetch rejected",
}
`;

exports[`action should create action with "non-error payload and meta" 1`] = `
Object {
  "meta": "Book is on bookshelf",
  "payload": Object {
    "name": "Read Robbin's",
  },
  "type": "[Todo] add",
}
`;

exports[`action should create action with "non-error payload" 1`] = `
Object {
  "payload": Object {
    "name": "Read Robbin's",
  },
  "type": "[Todo] add",
}
`;

exports[`action should create action with "type-only" 1`] = `
Object {
  "type": "[Todo] truncate",
}
`;
